use processbuilder and cleanup